--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             text-decoration: none;
             font-size: 1rem;
             margin: 0 1rem;
-            transition: color 0.3s ease;
+            transition: color 0.5s ease;
         }
         .menu a:hover {
             color: #ffd700;
@@ -78,7 +78,7 @@
 <body>
     <header>
         <div class="menu">
-            <a href="https://discord.gg/ND9HfeysCP" target="_blank">Join our Discord</a>
+            <a href="https://discord.gg/ND9HfeysCP" target="_blank">Join the Offical MineSting Discord Now!</a>
             <img src="https://media.discordapp.net/attachments/1330256924263845999/1333127111208079423/MinestingLOGO_MS.png?ex=6797c2df&is=6796715f&hm=bc6c41574e216b923a69986d9faf62d213c78eee0a15421d9d3d1ca9fdbf9a0a&=&format=webp&quality=lossless&width=768&height=768" alt="MineSting Logo" onclick="scrollToTop()">
             <div></div>
         </div>
@@ -86,13 +86,13 @@
 
     <main>
         <section class="section">
-            <h2 class="text-2xl font-bold mb-4">Welcome to MineSting!</h2>
-            <p>Here are the rules you need to follow to keep the server fun and enjoyable for everyone.</p>
+            <h2 class="text-2xl font-bold mb-4">Welcome to MineSting's Official Information Page.</h2>
+            <p>In this section we will cover what rules all staff and players should follow for the best server experience for all players.</p>
         </section>
 
         <section class="section">
             <h3>Rule 1</h3>
-            <p>This rule will explain respectful behavior and good conduct.</p>
+            <p>You shall respect all members of the community show respect,This includes not showing hatred,Racism and any type of Discrimination .</p>
         </section>
 
         <section class="section">
