--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             margin: 0 auto;
         }
         .section {
-            background-color: rgba(85, 107, 47, 0.9);
+            background-color: rgba(186, 147, 30);
             padding: 1rem;
             border-radius: 8px;
             margin-bottom: 1rem;
@@ -78,7 +78,7 @@
 <body>
     <header>
         <div class="menu">
-            <a href="https://discord.gg/ND9HfeysCP" target="_blank">Join the Offical MineSting Discord Now!</a>
+            <a href="https://discord.gg/ND9HfeysCP" target="_blank">Join the Offical MineSting Discord Today!</a>
             <img src="https://media.discordapp.net/attachments/1330256924263845999/1333127111208079423/MinestingLOGO_MS.png?ex=6797c2df&is=6796715f&hm=bc6c41574e216b923a69986d9faf62d213c78eee0a15421d9d3d1ca9fdbf9a0a&=&format=webp&quality=lossless&width=768&height=768" alt="MineSting Logo" onclick="scrollToTop()">
             <div></div>
         </div>
