--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             align-items: center;
         }
         .menu img {
-            width: 50px;
-            height: 50px;
+            width: 100px;
+            height: 100px;
             cursor: pointer;
         }
         .menu a {
@@ -58,7 +58,7 @@
         }
         .section:hover {
             transform: translateY(-5px);
-            background-color: rgba(107, 142, 35, 1);
+            background-color: rgba(237, 184, 24);
         }
         .section p {
             display: none;
