--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #556b2f, #6b8e23, #8fbc8f);
+            background: linear-gradient(135deg, #edaf11, #b3830b, #4a3604);
             background-size: cover;
             color: #f7fafc;
         }
