--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             color: #f7fafc;
         }
         header {
-            background-color: rgba(47, 79, 79, 0.8);
+            background-color: rgba(48, 35, 2);
             padding: 1rem;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             position: fixed;
