--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             align-items: center;
         }
         .menu img {
-            width: 65px;
-            height: 65px;
+            width: 60px;
+            height: 60px;
             cursor: pointer;
         }
         .menu a {
@@ -139,7 +139,11 @@
             <h3>Rule 10</h3>
             <p>This rule will explain overall community guidelines.</p>
         </section>
-           
+        <footer>
+           <p>&copy; MineSting Contacts:
+               Gmail:minesting.mc@gmail.com</p>
+        </footer>
+
         <footer>
             <p>&copy; 2025 MineSting. All rights reserved.</p>
         </footer>
