--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <p>This rule will explain overall community guidelines.</p>
         </section>
         <footer>
-           <p>&copy; MineSting Contacts:
+           <p>&copy; MineSting Contact:
                Gmail:minesting.mc@gmail.com</p>
         </footer>
 
