--- a/index.html
+++ b/index.html
@@ -97,47 +97,39 @@
 
         <section class="section">
             <h3>Rule 2</h3>
-            <p>This rule will explain cheating prevention and fair play.</p>
+            <p>Exploting/Hacking is extremly prohibited on this server and shall never be used in any circumstance.</p>
         </section>
 
         <section class="section">
             <h3>Rule 3</h3>
-            <p>This rule will explain keeping chat clean and appropriate.</p>
+            <p>Members and staff should learn to keep the chat appropiate and don't an example of no to do is Spamming.</p>
         </section>
 
         <section class="section">
             <h3>Rule 4</h3>
-            <p>This rule will explain the importance of listening to staff instructions.</p>
+            <p>All members shall listen to staff instructions and should show respect to staff no matter the circumstance.</p>
         </section>
 
         <section class="section">
             <h3>Rule 5</h3>
-            <p>This rule will explain griefing and its consequences.</p>
+            <p>Protect personal information, Personal information shall not be shared around this server including yours or anyone elses.</p>
         </section>
 
         <section class="section">
             <h3>Rule 6</h3>
-            <p>This rule will explain common sense and responsible gameplay.</p>
+            <p>Must always have approiate profile pictures and names.</p>
         </section>
+
+
 
         <section class="section">
             <h3>Rule 7</h3>
-            <p>This rule will explain protecting others' builds and respecting creativity.</p>
-        </section>
-
-        <section class="section">
-            <h3>Rule 8</h3>
-            <p>This rule will explain avoiding spam and misuse of server resources.</p>
-        </section>
-
-        <section class="section">
-            <h3>Rule 9</h3>
             <p>This rule will explain appropriate use of mods and plugins.</p>
         </section>
 
         <section class="section">
-            <h3>Rule 10</h3>
-            <p>This rule will explain overall community guidelines.</p>
+            <h3>Rule 8</h3>
+            <p>Always follow Discord's ToS.https://discord.com/terms.</p>
         </section>
         <footer>
            <p>&copy; MineSting Contact:
