--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
         <section class="section">
             <h3>Rule 7</h3>
-            <p>This rule will explain appropriate use of mods and plugins.</p>
+            <p>Players should never use any banned mods indluding crystal optimsers, and maps taht show players locations.</p>
         </section>
 
         <section class="section">
