--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Rules for the MineSting server - Stay informed, play fair, and have fun!">
+    <meta name="description" content="Information for the MineSting server - This is the information for Offical MineSting. Stay informed, play fair, and have fun!">
     <link rel="icon" href="https://media.discordapp.net/attachments/1330256924263845999/1333127111208079423/MinestingLOGO_MS.png?ex=6797c2df&is=6796715f&hm=bc6c41574e216b923a69986d9faf62d213c78eee0a15421d9d3d1ca9fdbf9a0a&=&format=webp&quality=lossless&width=768&height=768">
     <title>MineSting Server Rules</title>
     <style>
