--- a/index.html
+++ b/index.html
@@ -14,206 +14,7 @@
             background-size: cover;
             color: #f7fafc;
         }
-        header {
-            background-color: rgba(48, 35, 2);
-            padding: 1rem;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            position: fixed;
-            width: 100%;
-            top: 0;
-            z-index: 1000;
-            text-align: center;
-        }
-        .menu {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .menu img {
-            width: 60px;
-            height: 60px;
-            cursor: pointer;
-        }
-        .menu a {
-            color: #f7fafc;
-            text-decoration: none;
-            font-size: 1rem;
-            margin: 0 1rem;
-            transition: color 0.5s ease;
-        }
-        .menu a:hover {
-            color: #ffd700;
-        }
-        .sidebar {
-            position: fixed;
-            left: 0;
-            top: 0;
-            height: 100%;
-            width: 250px;
-            background-color: rgba(48, 35, 2, 0.95);
-            padding: 2rem 1rem;
-            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-            z-index: 999;
-        }
-        .sidebar a {
-            color: #f7fafc;
-            text-decoration: none;
-            display: block;
-            font-size: 1.2rem;
-            margin: 1rem 0;
-            transition: color 0.3s ease;
-        }
-        .sidebar a:hover {
-            color: #ffd700;
-        }
-        main {
-            margin-left: 270px;
-            padding: 6rem 1rem 1rem;
-            max-width: 800px;
-        }
-        .section {
-            background-color: rgba(186, 147, 30);
-            padding: 1rem;
-            border-radius: 8px;
-            margin-bottom: 1rem;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: all 0.3s ease;
-        }
-        .section:hover {
-            transform: translateY(-5px);
-            background-color: rgba(237, 184, 24);
-        }
-        .section p {
-            display: none;
-            margin-top: 0.5rem;
-            color: #f0e68c;
-        }
-        .section:hover p {
-            display: block;
-        }
-        footer {
-            text-align: center;
-            color: #a0aec0;
-            margin-top: 2rem;
-        }
-        .modal {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 90%;
-            max-width: 500px;
-            background-color: rgba(48, 35, 2, 0.95);
-            color: #f7fafc;
-            padding: 1.5rem;
-            border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-            z-index: 10000;
-        }
-        .modal h3 {
-            margin-top: 0;
-        }
-        .modal button {
-            margin-top: 1rem;
-            padding: 0.5rem 1rem;
-            background-color: #ffd700;
-            color: #000;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 1rem;
-        }
-        .modal button:hover {
-            background-color: #e6c200;
-        }
-        .modal-overlay {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            z-index: 9999;
-        }
-        .modal-overlay.active, .modal.active {
-            display: block;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <div class="menu">
-            <a href="https://discord.gg/ND9HfeysCP" target="_blank">Join the Official MineSting Discord Today!</a>
-            <img src="https://media.discordapp.net/attachments/1330256924263845999/1333127111208079423/MinestingLOGO_MS.png?ex=6797c2df&is=6796715f&hm=bc6c41574e216b923a69986d9faf62d213c78eee0a15421d9d3d1ca9fdbf9a0a&=&format=webp&quality=lossless&width=768&height=768" alt="MineSting Logo" onclick="scrollToTop()">
-        </div>
-    </header>
-
-    <div class="sidebar">
-        <a href="#welcome">Welcome</a>
-        <a href="#rules">Rules</a>
-        <a href="#store" onclick="openModal('storeModal')">Store</a>
-        <a href="#contact" onclick="openModal('contactModal')">Contact</a>
-    </div>
-
-    <main>
-        <section id="welcome" class="section">
-            <h2 class="text-2xl font-bold mb-4">Welcome to MineSting's Official Information Page.</h2>
-            <p>In this section we will cover what rules all staff and players should follow for the best server experience for all players.</p>
-        </section>
-
-        <section id="rules" class="section">
-            <h3>Server Rules</h3>
-            <ul>
-                <li>Respect all members of the community.</li>
-                <li>No exploiting or hacking.</li>
-                <li>Keep the chat appropriate and avoid spamming.</li>
-                <li>Follow staff instructions and show respect to them.</li>
-                <li>Protect personal information.</li>
-                <li>Use appropriate profile pictures and names.</li>
-                <li>Do not use banned mods.</li>
-                <li>Always follow Discord's ToS.</li>
-            </ul>
-        </section>
-
-        <footer>
-            <p>&copy; 2025 MineSting. All rights reserved.</p>
-            <p>Contact us: minesting.mc@gmail.com</p>
-        </footer>
-    </main>
-
-    <!-- Modals -->
-    <div class="modal-overlay" id="modalOverlay"></div>
-
-    <div class="modal" id="storeModal">
-        <h3>Store</h3>
-        <p>Visit our official store to support the server and purchase exclusive in-game items!</p>
-        <a href="https://example.com/store" target="_blank" style="color: #ffd700; text-decoration: underline;">Go to the Store</a>
-        <button onclick="closeModal()">Close</button>
-    </div>
-
-    <div class="modal" id="contactModal">
-        <h3>Contact</h3>
-        <p>For inquiries, please reach out to us at:</p>
-        <p>Email: <a href="mailto:minesting.mc@gmail.com" style="color: #ffd700;">minesting.mc@gmail.com</a></p>
-        <button onclick="closeModal()">Close</button>
-    </div>
-
-    <script>
-        function scrollToTop() {
-            window.scrollTo({ top: 0, behavior: 'smooth' });
-        }
-
-        function openModal(modalId) {
-            document.getElementById(modalId).classList.add('active');
-            document.getElementById('modalOverlay').classList.add('active');
-        }
-
-        function closeModal() {
-            document.querySelectorAll('.modal').forEach(modal => modal.classList.remove('active'));
-            document.getElementById('modalOverlay').classList.remove('active');
-        }
-    </script>
-</body>
-</html>
+    </style >
+<Header>
+    MineSting Inforamtion Page.
+</Header>
